--- a/curriculo.html
+++ b/curriculo.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
     </head>
     <body>
-        <h1><u>Henrique Ibarra Ortiz Urbano</u></h1>
+        <table>
+            <tr>
+                <th><h1><u>Henrique Ibarra <br> Ortiz Urbano</u></h1></th>
+                <th><img src="henrique.jpg"></th>
+            </tr>
+        </table>
+        <h2>Desempregado; <br> Deseja ser tecnico de informatica</h2>
+        <a href="https://www.linkedin.com/in/henrique-ortiz-241a11368/"
+            target="_blank">Meu LinkedIn</a>
         <p><strong>CPF: </strong>038.978.940-25 <br>
-            <strong>Idade: </strong> 16 anos</p>
+            <strong>Telefone </strong> (55) 51 9853-8146</p>
         <hr>
-        <h5>Nacionalidade: Brasileiro <br>
+        <p>Nacionalidade: Brasileiro <br>
             Naturalidade: Porto Alegre/RS <br>
             Moradia:Esteio/RS <br>
             Data de nascimento: 30/11/2008 <br>
@@ -18,7 +26,7 @@
             Escolaridade: 2º grau <br>
             Escola: ULBRA são lucas de sapucaia do sul <br>
             Email: henriqueortiz3090@gmail.com <br>
-        </h5>
+        </p>
         <hr>
         <p>Sobre mim: <br>
             Sou um aluno do 1º ensino médio que está cursando em TI. <br>
