--- a/curriculo.html
+++ b/curriculo.html
@@ -12,28 +12,17 @@
                 <th><img src="henrique.jpg"></th>
             </tr>
         </table>
-        <h2>Desempregado; <br> Deseja ser tecnico de informatica</h2>
+        <h2>Desempregado; <br> Deseja ser tecnico de informatica;</h2>
         <a href="https://www.linkedin.com/in/henrique-ortiz-241a11368/"
             target="_blank">Meu LinkedIn</a>
         <p><strong>CPF: </strong>038.978.940-25 <br>
-            <strong>Telefone </strong> (55) 51 9853-8146</p>
-        <hr>
-        <p>Nacionalidade: Brasileiro <br>
-            Naturalidade: Porto Alegre/RS <br>
-            Moradia:Esteio/RS <br>
-            Data de nascimento: 30/11/2008 <br>
-            Profissão: Estudante <br>
-            Escolaridade: 2º grau <br>
+            <strong>Telefone </strong> (55) 51 9853-8146 <br>
             Escola: ULBRA são lucas de sapucaia do sul <br>
-            Email: henriqueortiz3090@gmail.com <br>
-        </p>
+            Email: henriqueortiz3090@gmail.com</p>
         <hr>
-        <p>Sobre mim: <br>
-            Sou um aluno do 1º ensino médio que está cursando em TI. <br>
-            Ganhei uma medalha de prata em uma competição de matematica do
-            Colégio Luterano Concórdia São Leopoldo em 2023. <br>
-
-        </p>
-        <hr>
+        <p>Fazendo <strong>curso</strong> em tecnico informatica. <br>
+            Estudando no 2º grau na escola. </p>
+            <h2>Experiência profissional:</h2>
+            <p>Realizando o 2º grau. <br> cursando em IT.</p>
     </body>
 </html>
