--- a/curriculo.html
+++ b/curriculo.html
@@ -8,11 +8,17 @@
     <body>
         <table>
             <tr>
-                <th><h1><u>Henrique Ibarra <br> Ortiz Urbano</u></h1></th>
-                <th><img src="henrique.jpg"></th>
+                <th><h1><u>Henrique Ibarra <br> Ortiz Urbano </u></h1></th>
+                <th> </th><th> </th><th> </th><th> </th><th> </th><th> </th><th>
+                </th><th> </th><th> </th><th> </th><th> </th><th> </th>
+                <th> </th><th> </th><th> </th><th> </th><th> </th><th> </th><th>
+                </th><th> </th><th> </th><th> </th><th> </th><th> </th>
+                <th> </th><th> </th><th> </th><th> </th><th> </th><th> </th><th>
+                </th><th> </th><th> </th><th> </th><th> </th><th> </th>
+                <th><img srcset="henrique.jpg" width="175"></th>
             </tr>
         </table>
-        <h2>Desempregado; <br> Deseja ser tecnico de informatica;</h2>
+        <h2>Desempregado; <br> Deseja ser tecnico de informatica;br</h2>
         <a href="https://www.linkedin.com/in/henrique-ortiz-241a11368/"
             target="_blank">Meu LinkedIn</a>
         <p><strong>CPF: </strong>038.978.940-25 <br>
@@ -22,7 +28,7 @@
         <hr>
         <p>Fazendo <strong>curso</strong> em tecnico informatica. <br>
             Estudando no 2º grau na escola. </p>
-            <h2>Experiência profissional:</h2>
-            <p>Realizando o 2º grau. <br> cursando em IT.</p>
+        <h2>Experiência profissional:</h2>
+        <p>Realizando o 2º grau. <br> cursando em IT.</p>
     </body>
 </html>
