--- a/curriculo.html
+++ b/curriculo.html
@@ -12,7 +12,7 @@
                 <th><img srcset="henrique.jpg" width="175"></th>
             </tr>
         </table>
-        <h2>Desempregado; <br> Deseja ser tecnico de informatica;br</h2>
+        <h2>Desempregado; <br> Deseja ser tecnico de informatica;</h2>
         <a href="https://www.linkedin.com/in/henrique-ortiz-241a11368/"
             target="_blank">Meu LinkedIn</a>
         <p><strong>CPF: </strong>038.978.940-25 <br>
