--- a/menu.html
+++ b/menu.html
@@ -21,7 +21,7 @@
 
     <main>
         <section id="home">
-            <h2>Bem-vindo ò menu</h2>
+            <h2>Bem-vindo ao menu</h2>
             <p>Conteúdo da página inicial.</p>
         </section>
 
