--- a/menu.html
+++ b/menu.html
@@ -1,51 +1,55 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Site</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="<https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap>">
-</head>
-<body>
-    <header>
-        <h1>Meu Site</h1>
-        <nav>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Meu Site</title>
+        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet"
+            href="<https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap>">
+    </head>
+    <body>
+        <header>
+            <h1>Meu Site</h1>
+            <nav>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#sobre">Sobre</a></li>
+                    <li><a href="#contato">Contato</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <main>
+            <section id="home">
+                <h2>Bem-vindo ao menu</h2>
+                <p>Conteúdo da página inicial.</p>
+            </section>
+
+            <section id="sobre">
+                <h2>Sobre Nós</h2>
+                <p>Informações sobre o site ou empresa.</p>
+            </section>
+
+            <section id="contato">
+                <h2>Contato</h2>
+                <p>henriqueortiz3090@gmail.com <br>
+                    (55) 51 9853-8146</p>
+            </section>
+        </main>
+
+        <aside>
+            <h2>Links Úteis</h2>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#sobre">Sobre</a></li>
-                <li><a href="#contato">Contato</a></li>
+                <a
+                    href="https://www.linkedin.com/in/henrique-ibarra-ortiz-urbano-241a11368/"
+                    target="_blank">Meu LinkedIn</a>
+                <li><a href="<https://exemplo.com>">Exemplo 2</a></li>
             </ul>
-        </nav>
-    </header>
+        </aside>
 
-    <main>
-        <section id="home">
-            <h2>Bem-vindo ao menu</h2>
-            <p>Conteúdo da página inicial.</p>
-        </section>
-
-        <section id="sobre">
-            <h2>Sobre Nós</h2>
-            <p>Informações sobre o site ou empresa.</p>
-        </section>
-
-        <section id="contato">
-            <h2>Contato</h2>
-            <p>Informações de contato.</p>
-        </section>
-    </main>
-
-    <aside>
-        <h2>Links Úteis</h2>
-        <ul>
-            <li><a href="<https://exemplo.com>">Exemplo 1</a></li>
-            <li><a href="<https://exemplo.com>">Exemplo 2</a></li>
-        </ul>
-    </aside>
-
-    <footer>
-        <p>&copy; 2024 Meu Site. Todos os direitos reservados.</p>
-    </footer>
-</body>
+        <footer>
+            <p>&copy; 2025 Meu Site. Todos os direitos reservados.</p>
+        </footer>
+    </body>
 </html>
