menu(curriculo melhorado)

--- a/menu.html
+++ b/menu.html
@@ -3,18 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Meu Site</title>
+        <title>Meu Curriculo</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet"
             href="<https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap>">
     </head>
     <body>
         <header>
-            <h1>Meu Site</h1>
+            <h1>Meu Curriculo</h1>
             <nav>
                 <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#sobre">Sobre</a></li>
+                    <li><a href="#home">Começo</a></li>
+                    <li><a href="#sobre">Informações</a></li>
                     <li><a href="#contato">Contato</a></li>
                 </ul>
             </nav>
@@ -22,13 +22,15 @@
 
         <main>
             <section id="home">
-                <h2>Bem-vindo ao menu</h2>
-                <p>Conteúdo da página inicial.</p>
+                <h2>Bem-vindo ao meu Curriculo</h2>
+                <p><u>Henrique Ibarra Ortiz Urbano</u></p>
             </section>
 
             <section id="sobre">
-                <h2>Sobre Nós</h2>
-                <p>Informações sobre o site ou empresa.</p>
+                <h2>Informações</h2>
+                <p>CPF: 038.978.940-25 <br>
+                    Escola: ULBRA são lucas de sapucaia do sul
+                </p>
             </section>
 
             <section id="contato">
@@ -44,7 +46,6 @@
                 <a
                     href="https://www.linkedin.com/in/henrique-ibarra-ortiz-urbano-241a11368/"
                     target="_blank">Meu LinkedIn</a>
-                <li><a href="<https://exemplo.com>">Exemplo 2</a></li>
             </ul>
         </aside>
 
