--- a/curriculo.html
+++ b/curriculo.html
@@ -3,27 +3,24 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Curriculo</title>
+        <link rel="stylesheet" href="curriculocss.css">
     </head>
     <body>
-        <table>
-            <tr>
-                <th><h1><u>Henrique Ibarra <br> Ortiz Urbano </u></h1></th> 
-                <th><img srcset="henrique.jpg" width="175"></th>
-            </tr>
-        </table>
+        <h1><u>Henrique Ibarra <br> Ortiz Urbano </u></h1>
+        <img srcset="henrique.jpg" width="175">
         <h2>Desempregado; <br> Deseja ser tecnico de informatica;</h2>
-        <a href="https://www.linkedin.com/in/henrique-ibarra-ortiz-urbano-241a11368/"
+        <a
+            href="https://www.linkedin.com/in/henrique-ibarra-ortiz-urbano-241a11368/"
             target="_blank">Meu LinkedIn</a>
         <p><strong>CPF: </strong>038.978.940-25 <br>
             <strong>Telefone </strong> (55) 51 9853-8146 <br>
             Escola: ULBRA são lucas de sapucaia do sul <br>
             Email: henriqueortiz3090@gmail.com</p>
         <hr>
-        <p>Fazendo <strong>curso</strong> em tecnico informatica. <br>
-            Estudando no 2º grau na escola. </p>
         <h2>Experiência profissional:</h2>
-        <p>Realizando o 2º grau. <br> cursando em IT.</p>
+        <p>Realizando o 2º grau. <br> cursando em IT. <br>
+            Fazendo <strong>curso</strong> em tecnico informatica. <br>
+            Estudando no 2º grau na escola.</p>
     </body>
 </html>
-
