--- a/curriculo.html
+++ b/curriculo.html
@@ -15,7 +15,7 @@
             target="_blank">Meu LinkedIn</a>
         <p><strong>CPF: </strong>038.978.940-25 <br>
             <strong>Telefone </strong> (55) 51 9853-8146 <br>
-            Escola: ULBRA são lucas de sapucaia do sul <br>
+            Escola: ULBRA São Lucas de Sapucaia do Sul <br>
             Email: henriqueortiz3090@gmail.com</p>
         <hr>
         <h2>Experiência profissional:</h2>
