menu(curriculo melhorado)

--- a/menu.html
+++ b/menu.html
@@ -23,14 +23,14 @@
 
         <main>
             <section id="home">
-                <h2>Bem-vindo ao meu Curriculo</h2>
+                <h2>Bem-vindo ao Meu Curriculo</h2>
                 <p><u>Henrique Ibarra Ortiz Urbano</u></p>
             </section>
 
             <section id="sobre">
                 <h2>Informações</h2>
                 <p>CPF: 038.978.940-25 <br>
-                    Escola: ULBRA são lucas de sapucaia do sul
+                    Escola: ULBRA São Lucas De Sapucaia Do Sul
                 </p>
             </section>
 
@@ -46,7 +46,7 @@
             <ul>
                 <a
                     href="https://www.linkedin.com/in/henrique-ibarra-ortiz-urbano-241a11368/"
-                    target="_blank">Meu LinkedIn</a>
+                    target="_blank">LinkedIn</a>
                 <br>
             </aside>
             <footer>
