--- a/curriculo.html
+++ b/curriculo.html
@@ -9,7 +9,7 @@
     <body>
         <h1><u>Henrique Ibarra <br> Ortiz Urbano </u></h1>
         <img srcset="henrique.jpg" width="175">
-        <h2>Desempregado; <br> Deseja ser tecnico de informatica;</h2>
+        <h2>Deseja ser tecnico de informatica.</h2>
         <a
             href="https://www.linkedin.com/in/henrique-ibarra-ortiz-urbano-241a11368/"
             target="_blank">Meu LinkedIn</a>
