--- a/ExercíciosBoxModelHTML.html
+++ b/ExercíciosBoxModelHTML.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="ExerciciosBoxModelCSS.css">
     </head>
     <body>
-        <div class="Exemplo de Box Model">Exemplo de Box Model</div>
+        <div class="Exemplo">Exemplo de Box Model</div>
+        
     </body>
 </html>
