--- a/exercicio3.html
+++ b/exercicio3.html
@@ -7,6 +7,6 @@
         <link rel="stylesheet" href="eexercicio3.css">
     </head>
     <body>
-        <div class="Exemplo">Exemplo de Box Model</div>
+        <div class="Exemplo">Exemplo De Box Model</div>
     </body>
 </html>
